[package]
name = "eliza_error"
version = "0.99.1"
authors = ["Eliza Error Contributors <eliza@elizas.website>"]
edition = "2018"
readme = "README.md"
license = "WTFPL"
repository = "https://github.com/hawkw/eliza_error"
homepage = "https://github.com/hawkw/eliza_error"
keywords = ["error", "exception", "failure"]
categories = ["rust-patterns"]
description = """
“Times are bad. Children no longer obey their parents, and everyone is writing an error handling library.” — Cicero
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
